crates/aion-awl/tests/fixtures/rev2/loop-outcomes/valid/enum_when_totality.awl
//! Triage a ticket into exactly one lane; every lane is covered without otherwise.
workflow triage_ticket
  input ticket: String

  outcome dispatched: type Dispatched, route success

type Category = Urgent | Routine | Spam
type Triage     { category: Category, note: String }
type Dispatched { lane: String }

worker triage
  action classify(ticket: String) -> Triage
    node model, timeout 5m

step classify
  classify(ticket: ticket) -> result

  outcome urgent: when result.category == Urgent, route dispatched(lane: "page")
  outcome routine: when result.category == Routine, route dispatched(lane: "queue")
  outcome spam: when result.category == Spam, route dispatched(lane: "discard")
